# avocado-agent

./: .gitignore  CLAUDE.md  DESIGN.md  Dockerfile  Makefile  README.md  main.py  pyproject.toml
.claude/: settings.json
agent/: mcp_server.py  spec_agent.py
prompts/: backtrack_hint_prompt.txt  spec_generation_prompt.txt  system_prompt.txt
proof_state/: next_step.py  proof_state.py  proof_state_stepper.py
tests/: test_cbmc_output_parser.py  test_proof_state_stepper.py  test_tool_executor.py
util/: c_function.py  c_function_graph.py  function_specification.py  function_util.py  tree_sitter_util.py
verification/: cbmc_client.py  cbmc_output_parser.py  verification_cache.py  verification_input.py  verification_result.py
