[project]
name = "avocado-agent"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "mcp>=1.0.0",
    "diskcache>=5.6.3",
    "networkx>=3.6.1",
    "tree-sitter>=0.25.2",
    "tree-sitter-c>=0.24.1",
    "loguru>=0.7.3",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff==0.11.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["agent", "proof_state", "util", "verification"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I"]
